# mongo_schema

./: Cargo.toml  README.md
mongo_schema_macro/: Cargo.toml
mongo_schema_macro/mongo_schema_macro_derive/: Cargo.toml
mongo_schema_macro/mongo_schema_macro_derive/src/: lib.rs
mongo_schema_macro/mongo_schema_macro_derive/src/construct/: imports.rs  mod.rs  mongo_schema_impl.rs  new_struct.rs  struct_impl.rs
mongo_schema_macro/mongo_schema_macro_derive/src/destruct/: mod.rs  schema_attribute.rs  schema_definition.rs
mongo_schema_macro/src/: lib.rs
src/: lib.rs  schema_1.rs  schema_2.rs
