[package]
name = "mongo_schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
bson = { version = "2", features = ["chrono-0_4"] }
mongodb = "2.1"
once_cell = "1.10.0"
serde = "1"
thiserror = "1.0.30"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

mongo_schema_macro = { path = "./mongo_schema_macro" }
mongo_schema_macro_derive = { path = "./mongo_schema_macro/mongo_schema_macro_derive" }
